// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderFrame > renders a 4-seat game from seat 2 perspective (carol disconnected) 1`] = `
"[H[2J[38;5;46m[1m╔══════════════════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;118m[1mCHING[0m[38;5;34m v0.1[0m                              [38;5;178m8-BIT TERMINAL EDITION[0m  [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m CENTER TILES  [38;5;244m([0m[38;5;226m[1m◆[0m[38;5;244m = coins per tile)[0m[38;5;118m[1m [0m[38;5;46m[1m═══════════════════════════╗[0m
[38;5;40m║[0m  [38;5;246m[23 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[24 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;38m[26 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;38m[27 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;135m[29 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[30 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m                 [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;135m[32 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;214m[33 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[34 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[35 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[36 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m                [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m VAULTS [0m[38;5;46m[1m═══════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;51m[1malice     [0m  [38;5;246m[22 [0m[38;5;220m[1m◆[0m[38;5;246m][0m   [38;5;244mcoins:[0m [38;5;220m[1m1[0m                                   [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;207m[1mbob       [0m  [38;5;38m[25 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;38m[28 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m   [38;5;244mcoins:[0m [38;5;220m[1m4[0m                          [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;220m[2mYOU       [0m  [38;5;244m◇ empty vault[0m   [38;5;244mcoins:[0m [38;5;220m[1m0[0m                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;118m[1mAI (0.6)  [0m  [38;5;135m[31 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m   [38;5;244mcoins:[0m [38;5;220m[1m3[0m                                 [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m TURN: [38;5;220m[1mYOU[0m[38;5;118m[1m [0m[38;5;46m[1m════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;244mrolled    [0m[38;5;244m(none yet)[0m                                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;244mset aside [0m[38;5;244m(none)[0m   [38;5;244msum:[0m [38;5;196m[1m0[0m[38;5;196m no coin[0m                               [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;244mpicked    [0m[38;5;244m(none)[0m   [38;5;244mdice in hand:[0m 8                              [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
"
`;

exports[`renderFrame > renders mid-roll (set-aside coin, dice remaining) for solo view 1`] = `
"[H[2J[38;5;46m[1m╔══════════════════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;118m[1mCHING[0m[38;5;34m v0.1[0m                              [38;5;178m8-BIT TERMINAL EDITION[0m  [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m CENTER TILES  [38;5;244m([0m[38;5;226m[1m◆[0m[38;5;244m = coins per tile)[0m[38;5;118m[1m [0m[38;5;46m[1m═══════════════════════════╗[0m
[38;5;40m║[0m  [38;5;246m[21 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[22 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[23 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[24 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;38m[25 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;38m[26 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m                     [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;38m[27 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;38m[28 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;135m[29 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[30 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[31 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[32 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m             [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;214m[33 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[34 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[35 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[36 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m                         [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m VAULTS [0m[38;5;46m[1m═══════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;51m[1mYOU       [0m  [38;5;244m◇ empty vault[0m   [38;5;244mcoins:[0m [38;5;220m[1m0[0m                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;207m[1mAI (0.6)  [0m  [38;5;244m◇ empty vault[0m   [38;5;244mcoins:[0m [38;5;220m[1m0[0m                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m TURN: [38;5;51m[1mYOU[0m[38;5;118m[1m [0m[38;5;46m[1m════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;244mrolled    [0m[38;5;244m[[38;5;252m4[38;5;244m][0m [38;5;244m[[38;5;252m3[38;5;244m][0m [38;5;244m[[38;5;252m2[38;5;244m][0m [38;5;244m[[38;5;252m1[38;5;244m][0m [38;5;178m[[38;5;220m[1m◆[0m[38;5;178m][0m [38;5;244m[[38;5;252m5[38;5;244m][0m [38;5;244m[[38;5;252m5[38;5;244m][0m                           [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;244mset aside [0m[38;5;178m[[38;5;220m[1m◆[0m[38;5;178m][0m   [38;5;244msum:[0m [38;5;220m[1m5[0m[38;5;46m ✓coin[0m                                    [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;244mpicked    [0m[38;5;220m[1m◆[0m   [38;5;244mdice in hand:[0m 7                                   [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
"
`;

exports[`renderFrame > renders pre-bank state with NO coin (red sum, bust risk) 1`] = `
"[H[2J[38;5;46m[1m╔══════════════════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;118m[1mCHING[0m[38;5;34m v0.1[0m                              [38;5;178m8-BIT TERMINAL EDITION[0m  [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m CENTER TILES  [38;5;244m([0m[38;5;226m[1m◆[0m[38;5;244m = coins per tile)[0m[38;5;118m[1m [0m[38;5;46m[1m═══════════════════════════╗[0m
[38;5;40m║[0m  [38;5;246m[21 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[22 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[23 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[24 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;38m[25 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;38m[26 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m                     [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;38m[27 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;38m[28 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;135m[29 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[30 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[31 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[32 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m             [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;214m[33 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[34 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[35 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[36 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m                         [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m VAULTS [0m[38;5;46m[1m═══════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;51m[1mYOU       [0m  [38;5;244m◇ empty vault[0m   [38;5;244mcoins:[0m [38;5;220m[1m0[0m                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;207m[1mAI (0.6)  [0m  [38;5;244m◇ empty vault[0m   [38;5;244mcoins:[0m [38;5;220m[1m0[0m                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m TURN: [38;5;51m[1mYOU[0m[38;5;118m[1m [0m[38;5;46m[1m════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;244mrolled    [0m[38;5;244m(none yet)[0m                                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;244mset aside [0m[38;5;244m[[38;5;252m4[38;5;244m][0m [38;5;244m[[38;5;252m4[38;5;244m][0m [38;5;244m[[38;5;252m4[38;5;244m][0m   [38;5;244msum:[0m [38;5;196m[1m12[0m[38;5;196m no coin[0m                         [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;244mpicked    [0m[38;5;252m4[0m   [38;5;244mdice in hand:[0m 5                                   [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
"
`;

exports[`renderFrame > renders pre-bank state with a coin set aside 1`] = `
"[H[2J[38;5;46m[1m╔══════════════════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;118m[1mCHING[0m[38;5;34m v0.1[0m                              [38;5;178m8-BIT TERMINAL EDITION[0m  [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m CENTER TILES  [38;5;244m([0m[38;5;226m[1m◆[0m[38;5;244m = coins per tile)[0m[38;5;118m[1m [0m[38;5;46m[1m═══════════════════════════╗[0m
[38;5;40m║[0m  [38;5;246m[21 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[22 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[23 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[24 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;38m[25 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;38m[26 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m                     [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;38m[27 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;38m[28 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;135m[29 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[30 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[31 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[32 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m             [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;214m[33 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[34 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[35 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[36 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m                         [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m VAULTS [0m[38;5;46m[1m═══════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;51m[1mYOU       [0m  [38;5;244m◇ empty vault[0m   [38;5;244mcoins:[0m [38;5;220m[1m0[0m                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;207m[1mAI (0.6)  [0m  [38;5;244m◇ empty vault[0m   [38;5;244mcoins:[0m [38;5;220m[1m0[0m                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m TURN: [38;5;51m[1mYOU[0m[38;5;118m[1m [0m[38;5;46m[1m════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;244mrolled    [0m[38;5;244m(none yet)[0m                                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;244mset aside [0m[38;5;178m[[38;5;220m[1m◆[0m[38;5;178m][0m [38;5;244m[[38;5;252m5[38;5;244m][0m [38;5;244m[[38;5;252m5[38;5;244m][0m [38;5;244m[[38;5;252m5[38;5;244m][0m [38;5;244m[[38;5;252m5[38;5;244m][0m   [38;5;244msum:[0m [38;5;220m[1m25[0m[38;5;46m ✓coin[0m                   [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;244mpicked    [0m[38;5;220m[1m◆[0m [38;5;252m5[0m   [38;5;244mdice in hand:[0m 3                                 [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
   > [R]oll [S]top [Q]uit"
`;

exports[`renderFrame > renders the initial state for solo view 1`] = `
"[H[2J[38;5;46m[1m╔══════════════════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;118m[1mCHING[0m[38;5;34m v0.1[0m                              [38;5;178m8-BIT TERMINAL EDITION[0m  [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m CENTER TILES  [38;5;244m([0m[38;5;226m[1m◆[0m[38;5;244m = coins per tile)[0m[38;5;118m[1m [0m[38;5;46m[1m═══════════════════════════╗[0m
[38;5;40m║[0m  [38;5;246m[21 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[22 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[23 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;246m[24 [0m[38;5;220m[1m◆[0m[38;5;246m][0m [38;5;38m[25 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;38m[26 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m                     [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;38m[27 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;38m[28 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m [38;5;135m[29 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[30 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[31 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m [38;5;135m[32 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;135m][0m             [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;214m[33 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[34 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[35 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[36 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m                         [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m VAULTS [0m[38;5;46m[1m═══════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;51m[1mYOU       [0m  [38;5;244m◇ empty vault[0m   [38;5;244mcoins:[0m [38;5;220m[1m0[0m                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;207m[1mAI (0.6)  [0m  [38;5;244m◇ empty vault[0m   [38;5;244mcoins:[0m [38;5;220m[1m0[0m                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
[38;5;46m[1m╔═══[0m[38;5;118m[1m TURN: [38;5;51m[1mYOU[0m[38;5;118m[1m [0m[38;5;46m[1m════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m  [38;5;244mrolled    [0m[38;5;244m(none yet)[0m                                            [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;244mset aside [0m[38;5;244m(none)[0m   [38;5;244msum:[0m [38;5;196m[1m0[0m[38;5;196m no coin[0m                               [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;244mpicked    [0m[38;5;244m(none)[0m   [38;5;244mdice in hand:[0m 8                              [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
"
`;

exports[`renderGameOver > renders YOU WIN when viewer holds the top score 1`] = `
"[H[2J

[38;5;46m[1m╔═══[0m[38;5;118m[1m GAME OVER [0m[38;5;46m[1m════════════════════════════════════════════════════╗[0m
[38;5;40m║[0m                                                                  [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;220m[1m◆  ◆  ◆    Y O U   W I N    ◆  ◆  ◆[0m                             [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m                                                                  [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;51m[1mYOU       [0m  [38;5;220m[1m8[0m coins                                             [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m                [38;5;214m[33 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m [38;5;214m[34 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;230m[1m◆[0m[38;5;220m[1m◆[0m[38;5;214m][0m                               [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m                                                                  [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m  [38;5;207m[1mAI (0.6)  [0m  [38;5;220m[1m2[0m coins                                             [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m                [38;5;38m[25 [0m[38;5;220m[1m◆[0m[38;5;226m[1m◆[0m[38;5;38m][0m                                           [38;5;40m║[0m[38;5;235m▒[0m
[38;5;40m║[0m                                                                  [38;5;40m║[0m[38;5;235m▒[0m
[38;5;28m╚══════════════════════════════════════════════════════════════════╝[0m[38;5;235m▒[0m
 [38;5;235m▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒[0m
   [38;5;244m[any key to exit][0m"
`;
